<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.

  /!\ WARNING /!\

  MAKE SURE YOUR ITEMS BELOW HAVE THE SAME ID AS NAVIGATION GRAPHS

  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_navigation"
        android:contentDescription="@string/title_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/favorites_navigation"
        android:contentDescription="@string/title_favorites"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/account_navigation"
        android:contentDescription="@string/title_account"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:title="@string/title_account" />
</menu>
