<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="fr.stephanesallaberry.news.android.transport.login.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_margin_medium">

            <TextView
                android:text="@string/app_welcome_login"
                android:textSize="@dimen/text_medium"
                android:paddingVertical="@dimen/padding_margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginInputEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_margin_medium"
                android:autofillHints="emailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(editText) -> viewModel.changeEmail(editText.toString())}"
                    android:enabled="@{!viewModel.stateFlow.loading}"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:text="@{viewModel.stateFlow.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginInputPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_margin_medium"
                android:autofillHints="password">

                <EditText
                    android:id="@+id/loginInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_medium"
                    android:afterTextChanged="@{(editText) -> viewModel.changePassword(editText.toString())}"
                    android:autofillHints="password"
                    android:enabled="@{!viewModel.stateFlow.loading}"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:text="@{viewModel.stateFlow.password}"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButtonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="@{!viewModel.stateFlow.loading}"
                android:onClick="@{()->viewModel.submitLoginForm()}"
                android:padding="@dimen/padding_margin_small"
                android:text="@string/login_cta"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</layout>
